# Python_PIP_Libraries

WEBPAGE_CALSS_FETCHER/: pyproject.toml
WEBPAGE_CLASS_FETCHER/webpage_class_fetcher/: __init__.py  core.py
bel_webpage_class_fetcher/: README.md
bel_webpage_class_fetcher/bel_webpage_class_fetcher/: core.py
